# fastapi_server

./: README.md  dbupdate.cmd  pyproject.toml  run.cmd
src/test_fastapi/: CodyDataSet2.csv  Cody_model240702_v1.h5  alembic.ini  color_model.h5  color_model240603.h5  colorsDataSet240602.csv  colorsDataset.csv  database.py  main.py  models.py  myapi.db
src/test_fastapi/domain/Clothes/: Clothes_crud.py  Clothes_router.py  Clothes_schema.py
src/test_fastapi/domain/member/: member_crud.py  member_router.py  member_schema.py
src/test_fastapi/domain/user/: user_crud.py  user_router.py  user_schema.py
src/test_fastapi/learning_model/: cody.py  discrimination_color.py  judgment_of_clothes.py  predictcolor.py
src/test_fastapi/migrations/versions/: 05cb40af68bc_.py  06f292c42d50_.py  15ff2e1278c0_.py  16326ec2dae9_ss.py  18ba6b85bcc6_.py  245e170d06e0_.py  3232ed28d648_.py  499a19404406_.py  55e21f90579f_.py  573d0da0bcbe_.py  59f6806a0bc3_.py  5d8b600108f3_.py  5e5e05fbd4f0_.py  62f35bb229fe_.py  6c9b33f83133_.py  6ec1e6d346af_.py  6ed216ad2e79_.py  6f21170396bd_.py  766309cce1a8_.py  911de5900da0_.py  9966bd3d5dd4_.py  a4192637b3cf_.py  acbdbd1b949c_.py  b497667b6666_.py  bcde4b9ce73d_.py  c0ab76b42eb6_.py  c1ade078f2e5_.py  c67a7cb2357f_.py  d126a43541e4_.py  d8fa4a6c55da_.py  e86fac417692_.py  edbd0ce01b9e_.py  ef5812f54647_.py  fe50aed2dd8f_.py
